# CTA-mirror

catalogue/: common_catalogue_schema.sql
continuousintegration/docker/ctafrontend/cc7/etc/yum.repos.d/: cta-ci.repo
doc/CASTOR/: CMakeLists.txt
doc/ConferencePapers/CHEP2019/images/: 20021114-1222_atlas_write_test.csv  Atlas_2002_data17_reprocessing_thoughput.csv  Atlas_2002_data17_reprocessing_volume.csv  Atlas_2018_reprocessing_retrieve-2.csv  Atlas_2018_reprocessing_retrieve-3-raw.csv  Atlas_2018_reprocessing_retrieve-3.1-comma.csv  Atlas_2018_reprocessing_retrieve-3.csv  Atlas_2018_reprocessing_retrieve.csv  plot_atlas.m  plot_atlas2.m
migration/: CMakeLists.txt  cta-catalogue-initialise.sh  cta-catalogue-remove-castor-tapes.py  cta_catalogue_remove_castor_migration.sql  oracle_catalogue_castor_migration.sql
migration/castor/: CMakeLists.txt  begin_vo_export_to_cta.sh  castor_tools.py  castorns_build_dirsfullpath.sql  castorns_ctamigration_schema.sql  castorvmgr_ctamigration_schema.sql  complete_cta_export.py  dlf.py  export_production_tapepool_to_cta.sh  tapepool_castor_to_cta.py  vmgr_reenable_tapepool.sh  zerolen_castor_to_cta.py
migration/castor/tests/: create_castor_ns_schema.sql  create_castor_vmgr_schema.sql  drop_castor_ns_schema.sql  drop_castor_vmgr_schema.sql
migration/gRPC/: CMakeLists.txt  EosImportDirs.cpp  EosImportDirs.hpp  EosImportDirsCmd.cpp  EosImportFiles.cpp  EosImportFiles.hpp  EosImportFilesCmd.cpp  EosTestDirInject.cpp  EosTestFileInject.cpp  GrpcUtilsTest.cpp  json-pretty-print.sh
